--- a/templates/modules/graphic-diptych/graphic-diptych.css
+++ b/templates/modules/graphic-diptych/graphic-diptych.css
@@ -5,14 +5,12 @@
 graphic-diptych {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	margin-top: 30px;
+	margin-top: 40px;
 	margin-bottom: 30px;
 }
 
 graphic-diptych .diptych-pic {
 	max-width: 400px;
-	margin-top: 30px;
 	margin-bottom: 15px;
 }
 
@@ -22,6 +20,10 @@ graphic-diptych p {
 
 graphic-diptych.flipped {
 	flex-direction: column-reverse;
+}
+
+graphic-diptych.flipped .diptych-pic {
+	margin-top: 15px;
 }
 
 @media (min-width: 900px) {
